--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "react-zoom-pan-pinch": "^3.7.0",
     "web-vitals": "^2.1.4"
