--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^12.8.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
